# ICML-MFsim

./: .gitignore  pyproject.toml
data/pre_policy/: 10031994215.csv  10898255329.csv  10932789204.csv  11360556282.csv  11538098770.csv  12287727103.csv  12540099788.csv  12695585126.csv  12757294341.csv  12993249791.csv  13172370214.csv  13745664038.csv  14573415538.csv  3431227216808899.csv  3437038370353137.csv  3443197621791689.csv  3443562526241064.csv  3448772157944114.csv  3451804916598743.csv  3452584473649318.csv  3453249292186339.csv  3453656936899673.csv  3453675689558352.csv  3453675718928162.csv  3454256721550776.csv  3455278454240838.csv  3456465409077567.csv  3457180764465171.csv  3457191178925134.csv  3457250520132238.csv  3459378101726338.csv  3460049077161136.csv  3460099291076843.csv  3461274552166859.csv  3462537242957043.csv  3463394076393322.csv  3464863219571406.csv  3464893543788087.csv  3464942885303239.csv  3466379833885944.csv  (+98 more)
data/pre_state_distribution/: 10031994215.json  10031994215_pretty.json  10898255329.json  10932789204.json  11360556282.json  11538098770.json  12287727103.json  12540099788.json  12695585126.json  12757294341.json  12993249791.json  13172370214.json  13347733575.json  13745664038.json  14573415538.json  3431227216808899.json  3437038370353137.json  3443197621791689.json  3443562526241064.json  (+132 more)
datasets/: policy_datasets.py  state_datasets.py
tests/: collect.py  test_deatsets.py  test_state.py
training/: datasets.py  train.py  train_policy_model.py  train_state_transition.py
util/: read_item.py
(+3 files in other folders)
