[project]
name = "icml"
version = "0.1.0"
description = ""
authors = [
    {name = "whale",email = "yingzuocheng@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "accelerate (>=1.12.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "icml", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
